--- a/css/style.css
+++ b/css/style.css
@@ -3,35 +3,48 @@ body {
   font-family: "Montserrat", sans-serif;
   background-color: aliceblue;
 }
+.main {
+  margin-left: 50px;
+}
 .text-color {
   color: #26ABD4;
 }
+.btn-primary-custom {
+  background-color: #26ABD4;
+  color: white;
+}
 
 .search-field {
-  border: none;
-  border-radius: 50px;
-  padding: 5px;
-  outline: none;
+  /* border: 1px solid red;  */
+  text-align: center;
+  margin-bottom: 20px;
+
 }
-.search-field:hover {
-  outline: none;
-  border: none;
-}
-.search-box {
-  border: 1px solid rgb(3, 118, 211);
-  width: 281px;
-  border-radius: 5px;
+#input-field {
+  border: 1px solid #26ABD4;
+  width: 400px;
+  border-radius: 10px;
   margin: auto;
   margin-top: 10px;
-  border-right: none;
+  margin-bottom: 10px;
+  padding: 10px;
 } 
 
+#input-field:focus{
+  /* border: 1px solid red; */
+  outline: none;
+
+}
 
 
 .search-button {
-  padding: 10px 50px;
-  border-radius: 25px;
-  margin-left: 20px;
+  padding: 10px 30px ;
+  border-radius: 10px;
+  margin-left: 10px;
+  border: none;
+}
+.cart-main-custom{
+  margin-top: 10px;
 }
 
 #all-products {
@@ -66,16 +79,15 @@ body {
 .price-color {
   color: #F57224;
 }
+.review-icon {
+  color: #26ABD4;
+}
 
-.btn-custom {
+.btn-addtocart-custom {
   background-color: #F57224;
   color: white;
 }
 
-.btn-custom-danger {
-  background-color: #26ABD4;
-  color: white;
-}
 .cart {
   width: 350px;
   /* border: 1px solid green; */
