--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,10 @@ body {
   padding-left: 20px;
   transition: 0.6s;
 }
+.image-div .product-image {
+  background-color: #26ABD4;
+  color: #F57224;
+}
 /* hover effect on single product */
 .single-product:hover {
   box-shadow: 4px 4px 7px gray;
@@ -81,8 +85,9 @@ body {
 .product-image {
   width: 150px;
   height: 150px;
-
 }
+
+
 
 /* star icon color */
 .star-icon-color {
@@ -102,6 +107,7 @@ body {
 .btn-addtocart-custom {
   background-color: #F57224;
   color: white;
+  margin-right: 5px;
 }
 
 .cart {
