--- a/css/style.css
+++ b/css/style.css
@@ -70,10 +70,7 @@ body {
   padding-left: 20px;
   transition: 0.6s;
 }
-.image-div .product-image {
-  background-color: #26ABD4;
-  color: #F57224;
-}
+
 /* hover effect on single product */
 .single-product:hover {
   box-shadow: 4px 4px 7px gray;
@@ -110,6 +107,8 @@ body {
   margin-right: 5px;
 }
 
+
+/* cart section */
 .cart {
   width: 350px;
   border: 1px solid #26ABD4;
