--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,8 @@ body {
 .single-product:hover {
   box-shadow: 4px 4px 7px gray;
   border-radius: 10px;
-  border: 3px solid ivory;
+  border: 1px solid #26ABD4;
+
 }
 
 /* product image */
